<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bmnl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".developer.DeveloperDetailsFragment">

    <data>

        <variable
            name="developer"
            type="com.studytest.bmnltechexam.data.developer.Developer" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/toolbarContainer"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/developerPhoto"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/developer_photo"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorAccent"
                    bmnl:imageUrl="@{`https://www.freeiconspng.com/uploads/profile-icon-28.png`}"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/developerNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@{developer.name}"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/developerPhoto"
                    tools:text="Juan Dela Cruz" />

                <TextView
                    android:id="@+id/companyNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@{developer.company.name}"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/developerNameTextView"
                    tools:text="BeautyMnl" />

                <TextView
                    android:id="@+id/emailLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/email"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/companyNameTextView" />

                <TextView
                    android:id="@+id/emailValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@{developer.email}"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailLabelTextView"
                    tools:text="user@domain.com" />

                <TextView
                    android:id="@+id/phoneNumberLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/phone_number"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailValueTextView" />

                <TextView
                    android:id="@+id/phoneNumberValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@{developer.phone}"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberLabelTextView"
                    tools:text="09171234567" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="?attr/colorAccent"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/edit"
                android:textColor="@color/textWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="?attr/colorError"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/delete"
                android:textColor="@color/textWhite"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</layout>